<resources>
    <string name="app_name">TiME</string>
    <string name="plan_edit_title">Редактирование плана</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_save">Сохранить</string>
    <string name="menu_delete">Удалить</string>
    <string name="menu_main">Основное</string>
    <string name="menu_plan">Планы</string>
    <string name="menu_memoir">Мемуары</string>

    <string name="tab_plan_today">Сегодня</string>
    <string name="tab_plan_tomorrow">Завтра</string>
    <string name="tab_plan_week">Неделя</string>
    <string name="tab_plan_month">Месяц</string>
    <string name="tab_plan_year">Год</string>

    <string name="tab_memoirs_day">День</string>
    <string name="tab_memoirs_week">Неделя</string>
    <string name="tab_memoirs_month">Месяц</string>
    <string name="tab_memoirs_year">Год</string>

    <string name="memoir_this_period">Новый</string>
    <string name="memoir_previous_period">Предыдущий</string>
    <string name="memoir_message_add">Заполните мемуары</string>

    <string name="positive_button">Ок</string>
    <string name="negative_button">Отмена</string>
    <string name="notif_title_write_memoir_to_plan_day">Заполните мемуары и спланируйте завтрашний день</string>
    <string name="notif_title_write_memoir">Заполните мемуары</string>
    <string name="notif_title_to_plan_day">Сплнаируйте завтрашний день</string>
    <string name="notif_message_write_memoir_to_plan_day">Заполните мемуары и спланируйте завтрашний день</string>
    <string name="notif_message_write_memoir">Заполните мемуары</string>
    <string name="notif_message_to_plan_day">Сплнаируйте завтрашний день</string>

    <string name="plan_time_todo_hm">%1$d ч. %2$d мин.</string>
    <string name="plan_time_todo_m">%d мин.</string>
    <string name="plan_time_todo_zero">Just do it!</string>
    <string name="error_find_plan">Не удалось загрузить план. Попробуйте позже</string>
    <string name="error_change_plan">Не удалось сохранить план. Попробуйте позже</string>
    <string name="memoir_already_added">Мемуар на эту дату уже был добавлен</string>


</resources>
